  * Add new GPO sandboxes to utility scripts (#745)
  * Allow case-insensitive upload of member email addresses (#713)
  * Fix sliver status page (resource status) (#429)
  * Remove custom pgch; use version from latest GCF. Now requires gcf 2.4+ (#347,#392)
  * Ensure that only leads and admins can edit slice membership (#533)
  * Re define how we lookup members by EPPN

== 2.0 ==
  * Fix Google Analytics string to be a global variable (#743)
  * Remove obsolete settings file (#741)
  * Add Resources page should include tool-showmessage (#738)
  * Fix minor bugs in new portal CSS (#737)
  * Don't install ad RSpecs and map.php (#736)
  * Fix glossary to link to Trac wiki (#703)
  * Fix copyright notice in map.php (#735)
  * Add a script to check account existence (#700)
  * Remove fake slice and project email addresses (#729)
  * Create GENI resource map for monitor display (#734)
  * Update the portal's CSS (#717)
  * Add Google Analytics functionality (#718)
  * Make button-like things be buttons (#175)
  * Create interactive map of resources (#28)
  * Fix Slice/Project Membership functionality according to feedback (#496)
  * Enable VERIFYHOST in put_message (#660)
  * Add script to add an arbitrary attribute to a user (#701)
  * Change "Resource Specification" to RSpec on Profile and Add
  Resources pages (#707)

== 1.9.6 ==
  * Add ExoGENI FIU and UH racks to service registry (#714)

== 1.9.5 ==
  * slice expiration shouldn't pick a date past project expiration (#614)
  * Fix tracebacks in omni_php.py when creating a sliver fails (#649,#321)
  * wimax-enable.php should not check for certificates (#689)
  * Undefined variable in tool-expired-projects (#687)
  * pgch logs something with each CH call (#697)

== 1.9.4 ==
  * Log when someone tries to download their outside cert (#699)

== 1.9.3 ==
  * Re-enable pgch threading with fixes (#690)

== 1.9.2 ==
  * Disable pgch threading until it works (#690)

== 1.9.1 ==
  * GMOC reporting fix (#688)

== 1.9 ==