@@ -214,7 +214,8 @@ $edit_url = 'edit-slice.php?slice_id='.$slice_id;
 $add_url = 'slice-add-resources.php?slice_id='.$slice_id;
 $res_url = 'sliceresource.php?slice_id='.$slice_id;
 $proj_url = 'project.php?project_id='.$slice_project_id;
-$slice_own_url = 'slice-member.php?member_id='.$slice_owner_id . "&slice_id=" . $slice_id;
+$slice_own_url = "mailto:$owner_email";
+//$slice_own_url = 'slice-member.php?member_id='.$slice_owner_id . "&slice_id=" . $slice_id;
 $omni_url = "tool-omniconfig.php";
 $flack_url = "flack.php?slice_id=".$slice_id;
 $gemini_url = "gemini.php?slice_id=" . $slice_id;
@@ -419,23 +420,24 @@ print "<tr><td class='label'><b>Description</b></td><td>$slice_desc ";
 echo "<button disabled=\"disabled\" onClick=\"window.location='$edit_url'\"><b>Edit</b></button>";
 print "</td></tr>\n";
 print "<tr><th colspan='2'>Contact Information</th></tr>\n";
-print "<tr><td class='label'><b>Slice Owner</b></td><td><a href=$slice_own_url>$slice_owner_name</a> <a href='mailto:$owner_email'>e-mail</a></td></tr>\n";
+print "<tr><td class='label'><b>Slice Owner</b></td><td><a href=$slice_own_url>$slice_owner_name</a></td></tr>\n";
+//print "<tr><td class='label'><b>Slice Owner</b></td><td><a href=$slice_own_url>$slice_owner_name</a> <a href='mailto:$owner_email'>e-mail</a></td></tr>\n";
 print "</table>\n";
 // ---
 
-print "<h2>Slice members</h2>";
+print "<h2>Slice Members</h2>";
 ?>
 
-<p>Slice members will be able to login to resources reserved <i>in the future</i> if</p>
+<p>Slice members will be able to login to resources reserved <i>in the future</i> if:</p>
 <ul>
- <li>the resources were reserved directly through the portal (by clicking <b>Add Resources</b> on the slice page), and</li>
- <li>the slice member has uploaded an ssh public key.</li>
+ <li>The resources were reserved directly through the portal (by clicking <b>Add Resources</b> on the slice page), and</li>
+ <li>The slice member has uploaded an ssh public key.</li>
 </ul>
 
 <table>
 	<tr>
 		<th>Slice Member</th>
-		<th>Roles</th>
+		<th>Role</th>
 	</tr>
 	<?php
 usort($members, 'compare_members_by_role');
@@ -448,9 +450,14 @@ foreach($members as $member) {
   $member_name = $member_names[$member_id];
   $member_role_index = $member[SA_SLICE_MEMBER_TABLE_FIELDNAME::ROLE];
   $member_role = $CS_ATTRIBUTE_TYPE_NAME[$member_role_index];
+  // FIXME: Make this a mailto link
+  print "<tr><td>$member_name</td>" . 
+    "<td>$member_role</td></tr>\n";
+  /*
   print "<tr><td><a href=\"slice-member.php?slice_id=" . $slice_id . 
     "&member_id=$member_id\">$member_name</a></td>" . 
     "<td>$member_role</td></tr>\n";
+  */
 }
 	?>
 </table>
@@ -484,7 +491,9 @@ echo "<p><button $edit_members_disabled onClick=\"window.location='$edit_slice_m
 		  $member_id = $entry[LOGGING_TABLE_FIELDNAME::USER_ID];
 		  $member_name = $entry_member_names[$member_id];
 		  //    error_log("ENTRY = " . print_r($entry, true));
-		  print "<tr><td>$time</td><td>$message</td><td><a href=\"slice-member.php?slice_id=" . $slice_id . "&member_id=$member_id\">$member_name</a></td></tr>\n";
+		  //		  print "<tr><td>$time</td><td>$message</td><td><a href=\"slice-member.php?slice_id=" . $slice_id . "&member_id=$member_id\">$member_name</a></td></tr>\n";
+		  // FIXME: Want a mailto link
+		  print "<tr><td>$time</td><td>$message</td><td>$member_name</td></tr>\n";
   }
 ?>
 
